add deploy task

--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "postcss-svg": "^1.0.4",
     "require-dir": "^0.3.0",
     "rimraf": "^2.4.3"
+  },
+  "dependencies": {
+    "gulp-gh-pages": "0.5.4"
   }
 }
